--- a/lab7d.html
+++ b/lab7d.html
@@ -11,7 +11,7 @@
     <h2>Pensionat Sjöstugan</h2>
     <h3>Förfrågan om rumsbokning</h3>
     <!-- Lägg in formulären här nedan -->
-    <form id="booking" method="post" data-netlify="true">
+    <form id="booking" method="post" data-netlify="true" action="/lab7dsvar.html">
         <fieldset id="room">
             <legend>Val av rum</legend>
             <div>
